--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,11 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        git --version | grep "^git version $(cat git-version.txt)$"
-        echo $?
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: Verify git version
+      run:  git --version | grep "^git version $(cat git-version.txt)$"
+    - name: Verify git commands
+      run:  diff <(git help | grep "^   [a-z]" | cut -f 4 -d' ' | sort) git-commands.txt
