--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,5 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Verify git version
       run:  git --version | grep "^git version $(cat git-version.txt)$"
+    - name: Show git commands
+      run:  git --help
     - name: Verify git commands
       run:  diff <(git help | grep "^   [a-z]" | cut -f 4 -d' ' | sort) git-commands.txt
