--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,8 @@ jobs:
     - name: Verify git version
       run:  git --version | grep "^git version $(cat git-version.txt)$"
     - name: Show git commands
+      run:  git help -a 
+    - name: Show list of git commands
       run:  git help -a | grep "^   [a-z]" | awk '{print $1}'
-    - name: Verify git commands
-      run:  diff <(git help | grep "^   [a-z]" | cut -f 4 -d' ' | sort) git-commands.txt
+    - name: Compare git commands with git-commands.txt
+      run:  diff <(git help -a | grep "^   [a-z]" | awk '{print $1}') git-commands.txt
