--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,12 +11,20 @@ jobs:
     - uses: actions/checkout@v1
     - name: Verify git version
       run:  git --version | grep "^git version $(cat git-version.txt)$"
+    - name: Create users
+      run: |
+        useradd alice  
     - name: Show git commands
       run:  git help -a 
     - name: Show list of git commands
       run:  git help -a | grep "^   [a-z]" | awk '{print $1}' | sort
     - name: Compare git commands with git-commands.txt
       run:  diff <(git help -a | grep "^   [a-z]" | awk '{print $1}' | sort) git-commands.txt
-    - name: command 1 - git init
+    - name: command 1 - git init help
       run:  git init --help
+    - name: command 1.1 - git init
+      run:  |
+        mkdir ~/work
+        cd ~/work
+        git init .
       
