--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,7 +27,5 @@ jobs:
         cd ~/work
         git init .
         ls -Rla
-    - name: command 1.2 - git init (twice)
-      run:  |
-        pwd
-        cd
+    - name: command 1.2 - git init - twice
+      run: pwd
