--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -20,6 +20,18 @@ jobs:
     - name: command 1 - git init help
       run:  git init --help
     - name: command 1.1 - git init
-      run: pwd
-    - name: command 1.2 - git init - twice
-      run: pwd
+      run:  |
+        cd ~
+        rm -rf ~/workspace
+        mkdir ~/workspace
+        cd ~/workspace
+        git init .
+        ls -Rla
+    - name: command 1.2 - git init (twice)
+      run:  |
+        cd ~
+        rm -rf ~/workspace
+        mkdir ~/workspace
+        cd ~/workspace
+        git init .
+        git init .
