--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,7 +27,15 @@ jobs:
         cd ~/workspace
         git init .
         ls -Rla
-    - name: command 1.2 - git init (twice)
+    - name: command 1.2 - git --separate-git-dir
+      run:  |
+        cd ~
+        rm -rf ~/workspace
+        mkdir ~/workspace
+        cd ~/workspace
+        git init --separate-git-dir=./.repository .
+        ls -Rla
+    - name: command 1.3 - git init (twice)
       run:  |
         cd ~
         rm -rf ~/workspace
