--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -18,7 +18,10 @@ jobs:
     - name: Compare git commands with git-commands.txt
       run:  diff <(git help -a | grep "^   [a-z]" | awk '{print $1}' | sort) git-commands.txt
     - name: command 1 - git init help
-      run:  git init --help
+      run:  |
+        git init --help | grep -o -- "--[a-z-]*" | sort | uniq
+        diff <(git init --help | grep -o -- "--[a-z-]*" | sort | uniq) commands/git-init-options.txt
+        git init --help
     - name: command 1.1 - git init
       run:  |
         cd ~
