--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -47,7 +47,10 @@ jobs:
         mkdir ~/workspace
         cd ~/workspace
         git init --bare
-        git status
+        if test git status
+        then
+          echo "should have failed"
+        fi
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
