--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -47,10 +47,7 @@ jobs:
         mkdir ~/workspace
         cd ~/workspace
         git init --bare
-        if test git status
-        then
-          echo "should have failed"
-        fi
+        git status || echo
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
