--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -40,7 +40,7 @@ jobs:
         git commit -m "added file-1.txt"
         git status
         git log
-    - name: git init --bare / status
+    - name: git init --bare / status - incorrect usage
       run:  |
         cd ~
         rm -rf ~/workspace
@@ -48,6 +48,19 @@ jobs:
         cd ~/workspace
         git init --bare
         git status || echo
+    - name: git init --bare - as repository
+      run:  |
+        cd ~
+        rm -rf ~/workspace
+        mkdir ~/workspace
+        cd ~/workspace
+        git init --bare
+        rm -rf ~/workspace-2
+        mkdir ~/workspace-2
+        cd ~/workspace-2
+        git clone ~/workspace
+        cd ~/workspace-2/workspace
+        git status
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
