--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -35,7 +35,6 @@ jobs:
         git status
         echo "content" > file-1.txt
         git add file-1.txt
-        echo "added"
         git status
         git commit -m "added file-1.txt"
         git status
@@ -61,6 +60,13 @@ jobs:
         git clone ~/workspace
         cd ~/workspace-2/workspace
         git status
+        git config user.email "user1@gmail.com"
+        git config user.name "User 1"
+        echo "content" > file-1.txt
+        git add file-1.txt
+        git commit -m "added file-1.txt"
+        git push origin
+
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
