--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -65,6 +65,7 @@ jobs:
         echo "content" > file-1.txt
         git add file-1.txt
         git commit -m "added file-1.txt"
+        git log
         git push origin
 
     - name: command 1.3 - git init (twice)
