--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -59,6 +59,7 @@ jobs:
         cd ~/workspace-2
         git clone ~/workspace
         cd ~/workspace-2/workspace
+        git log
         git status
         git config user.email "user1@gmail.com"
         git config user.name "User 1"
@@ -67,7 +68,12 @@ jobs:
         git commit -m "added file-1.txt"
         git log
         git push origin
-
+        rm -rf ~/workspace-3
+        mkdir ~/workspace-3
+        cd ~/workspace-3
+        git clone ~/workspace
+        cd ~/workspace-3/workspace
+        git log
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
