--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -59,8 +59,8 @@ jobs:
         cd ~/workspace-2
         git clone ~/workspace
         cd ~/workspace-2/workspace
-        git log
-        git status
+        git log || echo
+        git status || echo
         git config user.email "user1@gmail.com"
         git config user.name "User 1"
         echo "content" > file-1.txt
@@ -73,7 +73,8 @@ jobs:
         cd ~/workspace-3
         git clone ~/workspace
         cd ~/workspace-3/workspace
-        git log
+        git log || echo
+        git status || echo
     - name: command 1.3 - git init (twice)
       run:  |
         cd ~
