--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -59,6 +59,7 @@ jobs:
         cd ~/workspace-2
         git clone ~/workspace
         cd ~/workspace-2/workspace
+        echo "Log of workspace-2"
         git log || echo
         git status || echo
         git config user.email "user1@gmail.com"
@@ -73,6 +74,7 @@ jobs:
         cd ~/workspace-3
         git clone ~/workspace
         cd ~/workspace-3/workspace
+        echo "Log of workspace-3"
         git log || echo
         git status || echo
     - name: command 1.3 - git init (twice)
