--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,4 +1,4 @@
-name: CI
+name: default
 
 on: [push]
 
@@ -17,71 +17,3 @@ jobs:
       run:  git help -a | grep "^   [a-z]" | awk '{print $1}' | sort
     - name: Compare git commands with git-commands.txt
       run:  diff <(git help -a | grep "^   [a-z]" | awk '{print $1}' | sort) git-commands.txt
-    - name: git init help
-      run:  |
-        git init --help | grep -o -- "--[a-z-]*" | sort | uniq
-        diff <(git init --help | grep -o -- "--[a-z-]*" | sort | uniq) commands/git-init-options.txt
-        git init --help
-    - name: git init (normal usage)
-      run:  |
-        cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
-        git init
-        git config user.email "user1@gmail.com"
-        git config user.name "User 1"
-        ls -la
-        git status
-        echo "content" > file-1.txt
-        git add file-1.txt
-        git status
-        git commit -m "added file-1.txt"
-        git status
-        git log
-    - name: git init --bare / status - incorrect usage
-      run:  |
-        cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
-        git init --bare
-        git status || echo
-    - name: git init --bare - as repository
-      run:  |
-        cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
-        git init --bare
-        rm -rf ~/workspace-2
-        mkdir ~/workspace-2
-        cd ~/workspace-2
-        git clone ~/workspace
-        cd ~/workspace-2/workspace
-        echo "Log of workspace-2"
-        git log || echo
-        git status || echo
-        git config user.email "user1@gmail.com"
-        git config user.name "User 1"
-        echo "content" > file-1.txt
-        git add file-1.txt
-        git commit -m "added file-1.txt"
-        git log
-        git push origin
-        rm -rf ~/workspace-3
-        mkdir ~/workspace-3
-        cd ~/workspace-3
-        git clone ~/workspace
-        cd ~/workspace-3/workspace
-        echo "Log of workspace-3"
-        git log || echo
-        git status || echo
-    - name: command 1.3 - git init (twice)
-      run:  |
-        cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
-        git init .
-        git init .
