--- a/.github/workflows/git-init.yml
+++ b/.github/workflows/git-init.yml
@@ -86,6 +86,7 @@ jobs:
         rm -rf ~/workspace
         mkdir ~/workspace
         cd ~/workspace
+        umask 007
         git init --shared=false
         ls -ld .git
     - name: git init --shared - group share
@@ -95,7 +96,6 @@ jobs:
         mkdir ~/workspace
         cd ~/workspace
         umask 007
-        umask
         git init --shared=true
         ls -ld .git
     - name: git init --shared - all
@@ -105,6 +105,5 @@ jobs:
         mkdir ~/workspace
         cd ~/workspace
         umask 007
-        umask
         git init --shared=all
         ls -ld .git
