--- a/.github/workflows/git-init.yml
+++ b/.github/workflows/git-init.yml
@@ -17,9 +17,9 @@ jobs:
     - name: git init (normal usage)
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         git init
         git config user.email "user1@gmail.com"
         git config user.name "User 1"
@@ -34,23 +34,23 @@ jobs:
     - name: git init --bare / status - incorrect usage
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         git init --bare
         git status || echo
     - name: git init --bare - as repository
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         git init --bare
-        rm -rf ~/workspace-2
-        mkdir ~/workspace-2
-        cd ~/workspace-2
-        git clone ~/workspace
-        cd ~/workspace-2/workspace
+        rm -rf ~/workspace-git-init-2
+        mkdir ~/workspace-git-init-2
+        cd ~/workspace-git-init-2
+        git clone ~/workspace-git-init
+        cd ~/workspace-git-init-2/workspace
         echo "Log of workspace-2"
         git log || echo
         git status || echo
@@ -61,20 +61,20 @@ jobs:
         git commit -m "added file-1.txt"
         git log
         git push origin
-        rm -rf ~/workspace-3
-        mkdir ~/workspace-3
-        cd ~/workspace-3
-        git clone ~/workspace
-        cd ~/workspace-3/workspace
+        rm -rf ~/workspace-git-init-3
+        mkdir ~/workspace-git-init-3
+        cd ~/workspace-git-init-3
+        git clone ~/workspace-git-init
+        cd ~/workspace-git-init-3/workspace
         echo "Log of workspace-3"
         git log || echo
         git status || echo
     - name: git init --separate-git-dir
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         git status || echo
         git init --separate-git-dir=./.something-else
         ls -la
@@ -83,27 +83,27 @@ jobs:
     - name: git init --shared - share is not allowed (default)
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         umask 007
         git init --shared=false
         ls -ld .git
     - name: git init --shared - group share
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         umask 007
         git init --shared=true
         ls -ld .git
     - name: git init --shared - all
       run:  |
         cd ~
-        rm -rf ~/workspace
-        mkdir ~/workspace
-        cd ~/workspace
+        rm -rf ~/workspace-git-init
+        mkdir ~/workspace-git-init
+        cd ~/workspace-git-init
         umask 007
         git init --shared=all
         ls -ld .git
