--- a/.github/workflows/git-init.yml
+++ b/.github/workflows/git-init.yml
@@ -116,7 +116,7 @@ jobs:
         umask 007
         git init --shared=0707
         ls -ld .git
-    - name: git init --shared
+    - name: git init --template
       run:  |
         cd ~
         rm -rf ~/git-template
