--- a/.github/workflows/git-add.yml
+++ b/.github/workflows/git-add.yml
@@ -11,6 +11,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: git add help
       run:  |
-        git add --help | grep -o -- "--[a-z-]*" | sort | uniq
+        git add --help | grep -o -- "--[a-z-]*" | grep -v '^..$' | sort | uniq
         diff <(git add --help | grep -o -- "--[a-z-]*" | grep -v '^..$' | sort | uniq) commands/git-add-options.txt
         git add --help
