--- a/.github/workflows/git-init.yml
+++ b/.github/workflows/git-init.yml
@@ -16,10 +16,10 @@ jobs:
         git init --help
     - name: git init (normal usage)
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir -p ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         git init
         git config user.email "user1@gmail.com"
         git config user.name "User 1"
@@ -33,24 +33,24 @@ jobs:
         git log
     - name: git init --bare / status - incorrect usage
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         git init --bare
         git status || echo
     - name: git init --bare - as repository
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         git init --bare
-        rm -rf ~/workspace-git-init-2
-        mkdir ~/workspace-git-init-2
-        cd ~/workspace-git-init-2
-        git clone ~/workspace-git-init
-        cd ~/workspace-git-init-2/workspace-git-init
+        rm -rf ${HOME}/workspace/git-init-2
+        mkdir ${HOME}/workspace/git-init-2
+        cd ${HOME}/workspace/git-init-2
+        git clone ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init-2/workspace/git-init
         echo "Log of workspace-2"
         git log || echo
         git status || echo
@@ -61,20 +61,20 @@ jobs:
         git commit -m "added file-1.txt"
         git log
         git push origin
-        rm -rf ~/workspace-git-init-3
-        mkdir ~/workspace-git-init-3
-        cd ~/workspace-git-init-3
-        git clone ~/workspace-git-init
-        cd ~/workspace-git-init-3/workspace-git-init
+        rm -rf ${HOME}/workspace/git-init-3
+        mkdir ${HOME}/workspace/git-init-3
+        cd ${HOME}/workspace/git-init-3
+        git clone ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init-3/workspace/git-init
         echo "Log of workspace-3"
         git log || echo
         git status || echo
     - name: git init --separate-git-dir
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         git status || echo
         git init --separate-git-dir=./.something-else
         ls -la
@@ -82,48 +82,48 @@ jobs:
         git status || echo
     - name: git init --shared - share is not allowed (default)
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         umask 007
         git init --shared=false
         ls -ld .git
     - name: git init --shared - group share
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         umask 007
         git init --shared=true
         ls -ld .git
     - name: git init --shared - all
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         umask 007
         git init --shared=all
         ls -ld .git
     - name: git init --shared - octal - nonsense value just to prove a point
       run:  |
-        cd ~
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         umask 007
         git init --shared=0707
         ls -ld .git
     - name: git init --template
       run:  |
-        cd ~
-        rm -rf ~/git-templates
-        mkdir ~/git-templates
-        echo "garbage" > ~/git-templates/garbage.txt
-        rm -rf ~/workspace-git-init
-        mkdir ~/workspace-git-init
-        cd ~/workspace-git-init
+        cd ${HOME}
+        rm -rf ${HOME}/git-templates
+        mkdir ${HOME}/git-templates
+        echo "garbage" > ${HOME}/git-templates/garbage.txt
+        rm -rf ${HOME}/workspace/git-init
+        mkdir ${HOME}/workspace/git-init
+        cd ${HOME}/workspace/git-init
         git init --template=${HOME}/git-templates
         ls -laR .git
