--- a/.github/workflows/git-add.yml
+++ b/.github/workflows/git-add.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: git add help
       run:  |
-        git add --help | grep -o -- "--[a-z-]*" | grep -v '^..$' | sort | uniq
-        diff <(git add --help | grep -o -- "--[a-z-]*" | grep -v '^..$' | sort | uniq) commands/git-add-options.txt
+        git add --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort
+        diff <(git add --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort) commands/git-add-options.txt
         git add --help
     - name: git add (basic)
       run:  |
