--- a/.github/workflows/git-add.yml
+++ b/.github/workflows/git-add.yml
@@ -11,8 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: git add help
       run:  |
-        git add --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort
-        diff <(git add --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort) commands/git-add-options.txt
+        source bin/functions.sh
+        list-options-for-git-command add
+        diff <(list-options-for-git-command add) commands/git-add-options.txt
         git add --help
     - name: git add (basic)
       run:  |
