--- a/.github/workflows/git-am.yml
+++ b/.github/workflows/git-am.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: git am help
       run:  |
-        git am  --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort
-        diff <(git am  --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort) commands/git-am-options.txt
+        source bin/functions.sh
+        list-options-for-git-command am
+        diff <(list-options-for-git-command am) commands/git-am-options.txt
         git am --help
