--- a/.github/workflows/git-init.yml
+++ b/.github/workflows/git-init.yml
@@ -11,8 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: git init help
       run:  |
-        git init --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort
-        diff <(git init --help | grep -- "^       -" | sed -e 's/^       //g' -e 's/, /\n/g'  -e 's/,$//g' | grep -- "^--." | sort) commands/git-init-options.txt
+        source bin/functions.sh
+        list-options-for-git-command init
+        diff <(list-options-for-git-command init) commands/git-init-options.txt
         git init --help
     - name: git init (normal usage)
       run:  |
