--- a/.github/workflows/git-archimport.yml
+++ b/.github/workflows/git-archimport.yml
@@ -11,8 +11,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: git archimport help
       run:  |
-        GIT_COMMAND=archimport
-        source bin/functions.sh
-        git help ${GIT_COMMAND}
-        list-options-for-git-command ${GIT_COMMAND}
-        diff <(list-options-for-git-command ${GIT_COMMAND}) commands/git-${GIT_COMMAND}-options.txt
+        git help ${GIT_COMMAND} || echo "archimport?"
