basic use case for git

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ script:
   - id
   - sh ${HOME}/build/ttwd80/understanding-git/general/git-version-check.sh
   - sh ${HOME}/build/ttwd80/understanding-git/general/git-command-count-check.sh
+  - sh ${HOME}/build/ttwd80/understanding-git/init/git-init-basic.sh
