--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ script:
   - sh ${HOME}/build/ttwd80/understanding-git/general/git-version-check.sh
   - sh ${HOME}/build/ttwd80/understanding-git/general/git-command-count-check.sh
   - sh ${HOME}/build/ttwd80/understanding-git/init/git-init-options-check.sh
-  - sh ${HOME}/build/ttwd80/understanding-git/init/git-init-basic.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-basic.sh
