added git init bare basic check

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ dist: bionic
 script:
   - git --version
   - id
-  - sh ${HOME}/build/ttwd80/understanding-git/general/git-version-check.sh
-  - sh ${HOME}/build/ttwd80/understanding-git/general/git-command-count-check.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/general/git-version-check.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/general/git-command-count-check.sh
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-options-check.sh
-  - sh ${HOME}/build/ttwd80/understanding-git/init/git-init-basic.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-basic-check.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-bare-basic-check.sh
