--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ script:
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-options-check.sh
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-basic-check.sh
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-bare-basic-check.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-quiet-basic-check.sh
