--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ script:
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-separate-git-dir-basic-check.sh
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-template-check.sh
   - bash ${HOME}/build/ttwd80/understanding-git/init/git-init-shared-check.sh
+  - bash ${HOME}/build/ttwd80/understanding-git/init/git-add-options-check.sh
